<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Tài khoản">
        <menu>
            <item
                android:id="@+id/category_envest"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_invest" />
            <item
                android:id="@+id/sign_in"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/sigin_in" />

            <item
                android:id="@+id/log_in"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_in" />


            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/setting" />
        </menu>
    </item>

    <item android:title="@string/market">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/list_price" />
            <item
                android:icon="@drawable/ic_menu_send"
                android:title="@string/details_price" />
            <item
                android:icon="@drawable/ic_menu_send"
                android:title="@string/siginal_sell_buy" />

            <item
                android:icon="@drawable/ic_menu_send"
                android:title="@string/news" />

        </menu>
    </item>

</menu>
